# DrawingProgram

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml  release.yml
source/: Draw.cpp  Menu.cpp  Screens.hpp  main.cpp
source/Components/: GuiFloatingWindow.hpp
source/images/: avatar.h  github.h  logo.h
web/: index.html  index.js  index.wasm  shell.html
